fix text alignment of question

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -42,6 +42,7 @@ h3 {
 
     @include media-breakpoint-up(md) {
         display: flex;
+        align-items: baseline;
     }
 
     > .flex-item {
@@ -60,6 +61,7 @@ h3 {
 
     .username-input-wrapper {
         display: flex;
+        align-items: baseline;
 
         .questionmark {
             margin-left: 0.7rem;
